# ECSFinder

./: README.md  pom.xml
3_0_SISSIz/: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  \  aclocal.m4  alirna.ps  aln.tree  config.h  config.h.in  config.status  configure  configure.ac  sum
3_0_SISSIz/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
3_0_SISSIz/examples/: 73_34_8.aln  Makefile  Makefile.in  alirna.ps
3_0_SISSIz/examples/SHAPE/: README  hiv_aug2013_w_19.txt  hiv_w_19.clu  sivcpz_1m7_w_19.txt  sivmac_1m7_w_19.txt
3_0_SISSIz/levmar/: Makefile  Makefile.in
3_0_SISSIz/levmar/.deps/: Axb.Po  lm.Po  lmbc.Po  lmlec.Po  misc.Po
3_0_SISSIz/librna/: 2Dfold.c  2Dfold.h  2Dpfold.c  2Dpfold.h  LPfold.c  LPfold.h  Lfold.c  Lfold.h  MEA.h  Makefile  Makefile.am  Makefile.in  PKplex.h  PS_dot.c  PS_dot.h  ProfileAln.c  ali_plex.h  alifold.c  alifold.h  alipfold.c  aln_util.c  alphabet.c  alphabet.h  boltzmann_sampling.c  boltzmann_sampling.h  centroid.c  centroid.h  cofold.c  cofold.h  combinatorics.c  commands.c  commands.h  constraints.c  constraints.h  constraints_SHAPE.c  constraints_SHAPE.h  constraints_hard.c  constraints_hard.h  constraints_ligand.c  constraints_ligand.h  (+83 more)
3_0_SISSIz/librna/.deps/: 2Dfold.Po  2Dpfold.Po  LPfold.Po  Lfold.Po  MEA.Po  PS_dot.Po  ProfileAln.Po  ProfileDist.Po  RNAstruct.Po  ali_plex.Po  alifold.Po  alipfold.Po  aln_util.Po  alphabet.Po  boltzmann_sampling.Po  c_plex.Po  centroid.Po  cofold.Po  combinatorics.Po  commands.Po  constraints.Po  constraints_SHAPE.Po  constraints_hard.Po  constraints_ligand.Po  constraints_soft.Po  convert_epars.Po  data_structures.Po  dp_matrices.Po  duplex.Po  energy_par.Po  equilibrium_probs.Po  eval.Po  exterior_loops.Po  file_formats.Po  file_formats_msa.Po  file_utils.Po  findpath.Po  fold.Po  gquad.Po  hairpin_loops.Po  (+36 more)
3_0_SISSIz/phyml/: Makefile  Makefile.in
3_0_SISSIz/phyml/.deps/: alrt.Po  bionj.Po  cl.Po  draw.Po  eigen.Po  free.Po  interface.Po  lk.Po  m4.Po  main.Po  mc.Po  models.Po  optimiz.Po  options.Po  pars.Po  rates.Po  simu.Po  spr.Po  utilities.Po
3_0_SISSIz/scripts/: window_SHAPE.R
3_0_SISSIz/sissiz/: Makefile  Makefile.in  dkiss.c  dkiss.h
3_0_SISSIz/sissiz/.deps/: dkiss.Po  evolve.Po  global.Po  models.Po  mutate.Po  treefile.Po
3_0_SISSIz/src/: Makefile  Makefile.am  Makefile.am.save  Makefile.in  SISSIz  SISSIz.c  cmdline_sissiz.c  cmdline_sissiz.ggo  cmdline_sissiz.h  expfit.c  rnaz_utils.c  rnaz_utils.h  treeML.c
3_0_SISSIz/src/.deps/: SISSIz.Po  bionj_custom.Po  cmdline_sissiz.Po  expfit.Po  rnaz_utils.Po  treeML.Po
MT/: TP.csv  TP.tsv  TP_negative.tsv  TP_positive.tsv  TP_rRNA.tsv  TP_tRNA.tsv  cox  final.csv  final_prediction_GLM.csv  final_prediction_RF.csv  output.maf  predictions.csv  rRNA  rRNA.tsv  tRNA  tRNA.tsv  windows.bed  windows_FP.bed  windows_TP.bed
MT/aln/: .Rhistory  10632_10766  12612_12828  12762_13045  13360_13560  8006_8176  8017_8167  MT_10368_10595_24_76.9_0.2_0.55_32.4_3.7_34_-.aln  MT_10368_10595_24_76.9_0.2_0.55_32.4_3.7_34_-.stk  MT_10368_10595_24_76.9_0.2_0.55_32.4_3.7_34_-.txt  MT_10368_10595_24_76.9_0.2_0.55_32.4_3.7_89_+.aln  MT_10368_10595_24_76.9_0.2_0.55_32.4_3.7_89_+.stk  MT_10368_10595_24_76.9_0.2_0.55_32.4_3.7_89_+.txt  MT_10368_10595_24_76_9_0_2_0_55_32_4_3_7_34_-_0001.cov  MT_10368_10595_24_76_9_0_2_0_55_32_4_3_7_34_-_0001.helixcov  MT_10368_10595_24_76_9_0_2_0_55_32_4_3_7_34_-_0001.power  MT_10368_10595_24_76_9_0_2_0_55_32_4_3_7_34_-_0001.sorted.cov  MT_10368_10595_24_76_9_0_2_0_55_32_4_3_7_89_+_0001.cov  MT_10368_10595_24_76_9_0_2_0_55_32_4_3_7_89_+_0001.helixcov  MT_10368_10595_24_76_9_0_2_0_55_32_4_3_7_89_+_0001.power  MT_10368_10595_24_76_9_0_2_0_55_32_4_3_7_89_+_0001.sorted.cov  MT_10632_10766_24_74.5_0.2_0.6_40.8_0.0_132_+.aln  MT_10632_10766_24_74.5_0.2_0.6_40.8_0.0_132_+.stk  MT_10632_10766_24_74.5_0.2_0.6_40.8_0.0_132_+.txt  MT_10632_10766_24_74.5_0.2_0.6_40.8_0.0_132_+_cut.aln  MT_10632_10766_24_74.5_0.2_0.6_40.8_0.0_132_+_cut_new.aln  MT_10632_10766_24_74.5_0.2_0.6_40.8_0.0_13_-.aln  MT_10632_10766_24_74.5_0.2_0.6_40.8_0.0_13_-.stk  MT_10632_10766_24_74.5_0.2_0.6_40.8_0.0_13_-.txt  MT_10632_10766_24_74_5_0_2_0_6_40_8_0_0_132_+_0001.cov  MT_10632_10766_24_74_5_0_2_0_6_40_8_0_0_132_+_0001.helixcov  MT_10632_10766_24_74_5_0_2_0_6_40_8_0_0_132_+_0001.power  MT_10632_10766_24_74_5_0_2_0_6_40_8_0_0_132_+_0001.sorted.cov  MT_10632_10766_24_74_5_0_2_0_6_40_8_0_0_13_-_0001.cov  MT_10632_10766_24_74_5_0_2_0_6_40_8_0_0_13_-_0001.helixcov  MT_10632_10766_24_74_5_0_2_0_6_40_8_0_0_13_-_0001.power  MT_10632_10766_24_74_5_0_2_0_6_40_8_0_0_13_-_0001.sorted.cov  MT_10667_10764_24_77.1_0.2_0.53_44.3_0.0_11_-.aln  MT_10667_10764_24_77.1_0.2_0.53_44.3_0.0_11_-.stk  MT_10667_10764_24_77.1_0.2_0.53_44.3_0.0_11_-.txt  (+4025 more)
MT/outputFastaDir/: block_1_part_1_chrMT_1_1626_+.fasta  (+13 more)
RF/: final_rf_model.rds  predictions_ECSFinder.R
hybrid_blocks/: READ.me
terc_1/: final.csv  output.maf
(+2283 files in other folders)
