noinst_LIBRARIES = libRNA.a
 
libRNA_a_SOURCES = \
    dist_vars.c \
    data_structures.c \
    part_func.c \
    treedist.c \
    inverse.c \
    ProfileDist.c \
    RNAstruct.c \
    mfe.c \
    fold.c \
    stringdist.c \
    subopt.c \
    list.c \
    mfe_window.c \
    Lfold.c \
    cofold.c \
    part_func_co.c \
    ProfileAln.c \
    duplex.c \
    alifold.c \
    alipfold.c \
    LPfold.c \
    part_func_up.c \
    ribo.c \
    findpath.c \
    MEA.c \
    mm.c \
    2Dfold.c \
    2Dpfold.c \
    plex_functions.c \
    ali_plex.c \
    c_plex.c \
    plex.c \
    snofold.c \
    snoop.c \
    move_set.c \
    gquad.c \
    eval.c \
    perturbation_fold.c \
    centroid.c \
    model.c \
    dp_matrices.c \
    boltzmann_sampling.c \
    equilibrium_probs.c \
    neighbor.c \
    walk.c \
    alphabet.c \
    unstructured_domains.c \
    constraints.c \
    constraints_SHAPE.c \
    constraints_hard.c \
    constraints_soft.c \
    constraints_ligand.c \
    utils.c \
    aln_util.c \
    string_utils.c \
    structure_utils.c \
    file_utils.c \
    file_formats.c \
    file_formats_msa.c \
    commands.c \
    units.c \
    combinatorics.c \
    plot_aln.c \
    plot_layouts.c \
    plot_structure.c \
    naview.c \
    PS_dot.c \
    exterior_loops.c \
    hairpin_loops.c \
    interior_loops.c \
    multibranch_loops.c \
    read_epars.c \
    energy_par.c \
    params.c \
    convert_epars.c \
    special_const.c \
    ugly_bt.c 

noinst_HEADERS= \
        energy_par.h \
    pair_mat.h \
    RNAstruct.h \
    dist_vars.h \
    mfe.h \
    fold.h \
    part_func.h \
    stringdist.h \
    edit_cost.h \
    fold_vars.h \
    profiledist.h \
    treedist.h \
    energy_const.h \
    inverse.h \
    PS_dot.h \
    utils.h \
    params.h \
    subopt.h \
    cofold.h \
    duplex.h \
    alifold.h \
    aln_util.h \
    part_func_co.h \
    ProfileAln.h \
    LPfold.h \
    Lfold.h \
    part_func_up.h \
    ribo.h \
    findpath.h \
    data_structures.h \
    MEA.h \
    mm.h \
    loop_energies.h \
    exterior_loops.h \
    hairpin_loops.h \
    interior_loops.h \
    multibranch_loops.h \
    naview.h \
    2Dfold.h \
    2Dpfold.h \
    read_epars.h \
    convert_epars.h \
    PKplex.h\
    plot_layouts.h \
    ali_plex.h \
    plex.h \
    snofold.h \
    snoop.h \
    move_set.h\
    gquad.h \
    constraints.h \
    eval.h \
    perturbation_fold.h \
    centroid.h\
    structure_utils.h \
    string_utils.h \
    model.h \
    file_formats.h \
    dp_matrices.h \
    plot_structure.h \
    plot_aln.h \
    boltzmann_sampling.h \
    equilibrium_probs.h \
    constraints_ligand.h \
    constraints_SHAPE.h \
    constraints_hard.h \
    constraints_soft.h \
    alphabet.h \
    grammar.h \
    structured_domains.h \
    unstructured_domains.h \
    file_formats_msa.h \
    file_utils.h \
    commands.h \
    units.h \
    combinatorics.h \
    neighbor.h \
    walk.h \
    intl11.h intl11dH.h intl21.h intl21dH.h \
    intl22.h intl22dH.h list.h\
    1.8.4_epars.h 1.8.4_intloops.h \
    special_const.h ugly_bt.h \
    circfold.inc \
    alicircfold.inc \
    model_avg.inc \
    model_sd.inc \
    color_output.inc \
    special_const.h \
    ugly_bt.h


